--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,20 @@ user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
-/vendor/
-
+/assets
+/logs
+/system
+/user_guide
+/composer.json
+/favicon.ico
+/license.txt
+/contributing.md
+/index.php
+/.gitignore
+/readme.rst
+/composer.lock
+/vendor
+/application
 # IDE Files
 #-------------------------
 /nbproject/
